zero-cost-templating/tests/ui/compile_fail_expand/type_mismatch_because_missing_call.stderr
error[E0308]: mismatched types
  --> tests/ui/compile_fail_expand/type_mismatch_because_missing_call.rs:14:20
   |
14 |     let template = template.test_page_title1(page_title);
   |                    ^^^^^^^^-----------------------------
   |                    |
   |                    expected `Template<TestTemplate1, _, _>`, found `Template<TestTemplate0, (), ()>`
   |                    expected due to this
   |
   = note: expected struct `Template<TestTemplate1, _, _>`
              found struct `Template<TestTemplate0, (), ()>`
